--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,12 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/main.py" },
+    { "src": "/api/(.*)", "dest": "main.py" },
     { "src": "/(.*)", "dest": "/frontend-partner-main/$1" }
-  ]
+  ],
+  "functions": {
+    "main.py": {
+      "runtime": "python3.9"
+    }
+  }
 }
