--- a/vercel.json
+++ b/vercel.json
@@ -8,16 +8,19 @@
     {
       "src": "frontend-partner-main/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "main.py" },
-    { "src": "/(.*)", "dest": "/frontend-partner-main/$1" }
-  ],
-  "functions": {
-    "main.py": {
-      "runtime": "python3.9"
+    {
+      "src": "/api/(.*)",
+      "dest": "main.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/frontend-partner-main/$1"
     }
-  }
+  ]
 }
